--- a/src/app/components/organisms/header-bar/header-bar.component.html
+++ b/src/app/components/organisms/header-bar/header-bar.component.html
@@ -1,3 +1,12 @@
+
 <header>
-  
+  <div class="logo">
+    <h1>Practice App</h1>
+  </div>
+  <div class="page-title">
+    <h1>{{pageTitle}}</h1>
+  </div>
+  <div class="login-info">
+    <button *ngIf="showLogoutBtn" (click)="logout()">Logout</button>
+  </div>
 </header>
