--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
 
-body{
+html{
   margin: 0;
+  max-height: 100vh;
+  max-width: 100vw;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+.content {
+  height: calc(100vh - 4rem);
+  overflow: auto;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+}
+
+// Board
+
+.section {
+  width: 15rem;
+  background-color: #ddd;
+  border-radius: 5px;
+  height: 100%;
+  padding: .5rem;
+
+  &.new {
+    min-width: 4rem;
+    width: 4rem;
+    display: flex;
+    justify-content: center;
+
+    h4 {
+      writing-mode: vertical-lr;
+    }
+  }
 }
